		-Allows the user to define block sizes for different use cases (BluRay-ROM, tape, etc)
		-defines the categories and category-root directories in both *nix and windows filesystems
		-defines which categories are default and which are to be used in inclusive mode
	-replaced the init arguments:
		-"--setup" launches the program in config mode.
		-"--inc" launches the program in backup mode, functioning inclusively (across all categories)
		-"--rcv" launches in recovery mode, as before.
	-added Debugging Mode!
		-called with "--debug" flag
		-activates a series of debugging functions that display additional information during program operation. Not user-friendly.

v.0.2.1 (legacy):
	-Improved debugging output with clarifications
	-Added "expected fingerprint" value for the DR key to help minimize key mismatches
	-Added automated signing and verification
		-default signing mode toggled in "--setup"
		-automatically signs blocks with the key indicated in setup
		-verifies the signature for blocks read in -rcv mode. If the signature can't be sufficiently verified, asks the user whether or not to continue
		-full documentation in readme
	-Added skipped file logging
		-a list of files too large to fit into the user-defined block is now generated and saved together with the packaged blocks on the desktop

v0.2.2 (release):
	-Now possible to allow a "keyring-only mode", which skips keyloading/keyremoval.
	-Fixed bug in recovery that would crash Tapestry on an unknown category.
	-Organization improvements: outputs moved to a subdirectory on the desktop, rather than loose.
	-Script will now check to see if loopback pinentry is enabled. If it is not, it will ask the user for permission to add it, or disable signing-by-default.

v0.3.0 (dev):
    -Multiprocessing is now used for some steps of operation.
    --Decision was made to improve performance.
    -Recovery pickle is now added to all blocks(old was block1).
    -Minor fixes to various naming systems.